 
 * lu: New operation for LU(P) decomposition of interval matrices
 
 * mulrevtopair: No longer available, use mulrev with two output parameters for
   two-output division
 
 * setdec: No longer available, use infsupdec instead
 
 * overlap: Renamed one overlapping state from equal to equals
 
 * mldivide, mrdivide, inv: Greatly improved accuracy and performance of the
   linear solver
 
 * Improved accuracy of vector sums, dot products, pownrev, and powrev2
 
 * Small performance improvements

Bugfixes
 * Compatibility with GNU Octave 4.0 (bug #43925)
 * Build problems during package installation with environment variables solved
 * iscommoninterval: The decorated variant must return true for common
   intervals without com decoration
 * eq: The decorated variant must not consider the decoration value
 * Several decorated functions: When evaluated on a subset of the function's
   domain, the result's decoration must be dac if the function's restriction
   to that subset is continuous
 * Decorated boolean functions: Must return false when evaluated on NaI input
 * Interval constructors: A PossibleUndefined warning must be issued if an
   interval is created from two very close decimal numbers (which can not be
   separated in the floating-point context) where the lower boundary is greater
   than the upper boundary when compared with infinite precision
 * Interval constructors: NaNs must produce empty intervals
 * Decorated interval constructor: Illegal decorations for empty intervals must
   be adjusted to trv, and illegal decoration com for unbounded intervals must
   be adjusted to dac.
 * cancelminus/cancelplus: The functions returned wrong results if the interval
   widths could not be compared in double-precision
 * cos: Accuracy for x = [0] improved
 * pow, powrev1, powrev2: The function must be defined for x = 0 and y > 0
 * All reverse operations: Must return a trivial decoration information at best
   (the only exception is mulrev)

0.1.1 2015-02-01