@@ -15,6 +15,8 @@
  * mldivide, mrdivide, inv: Greatly improved accuracy and performance of the
    linear solver
  
+ * New functions: nthroot
+ 
  * Improved accuracy of vector sums, dot products, pownrev, and powrev2
  
  * Small performance improvements
